fixed processor block spacings for dedic page order

--- a/src/Pages/ServicesPage/DedicatedServersPage/DedicOrderPage/DedicOrderPage.module.scss
+++ b/src/Pages/ServicesPage/DedicatedServersPage/DedicOrderPage/DedicOrderPage.module.scss
@@ -86,7 +86,7 @@
 
 .first_processors_block,.second_processors_block {
   // width: 255px;
-  gap: 15px;
+  gap: 25px;
   // justify-content: space-between;
 }
 
@@ -109,7 +109,7 @@
 }
 
 .processor_name {
-  margin-right: 5px;
+  margin-right: 15px;
 }
 .select {
   margin-bottom: 15px;
@@ -497,6 +497,7 @@
     justify-content: space-between;
     align-items: stretch;
     margin-bottom: 30px;
+    gap: 16px;
   }
 
   .first_processors_block {
@@ -507,7 +508,6 @@
   }
 
   .second_processors_block {
-    height: 62px;
     width: fit-content;
     display: flex;
     // flex-direction: column;
